--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -48,6 +52,7 @@ coverage.xml
 # Django stuff:
 *.log
 *.pot
+staticfiles
 
 # Sphinx documentation
 docs/_build/
